--- a/Back-End Project/Areas/Admin/Views/Event/Update.cshtml
+++ b/Back-End Project/Areas/Admin/Views/Event/Update.cshtml
@@ -54,7 +54,7 @@
                             </select>
                         </div>
 
-                        <button type="submit" class="btn btn-primary mr-2">Create</button>
+                        <button type="submit" class="btn btn-submit mr-2">Update</button>
                         <a class="btn btn-light" asp-action="Index">Cancel</a>
 
                     </form>
