--- a/Back-End Project/Areas/Admin/Views/Teacher/Index.cshtml
+++ b/Back-End Project/Areas/Admin/Views/Teacher/Index.cshtml
@@ -1,11 +1,9 @@
 ﻿@using Back_End_Project.Models
-@model List<Event>
+@model List<Teacher>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Areas/Admin/Views/shared/_AdminLayout.cshtml";
 }
-
-
 
 <div class="card-body">
 
@@ -26,24 +24,24 @@
                 </tr>
             </thead>
             <tbody>
-                @foreach (Event eventt in Model)
+                @foreach (Teacher teacher in Model)
                 {
 
                     <tr>
-                        <td>@eventt.Id</td>
-                        
+                        <td>@teacher.Id</td>
+
                         <td>
-                            <img src="~/img/event/@eventt.Image"
-                             alt="Inner Image" />
+                            <img src="~/img/teacher/@teacher.Image" alt="inner image"/>
+
                         </td>
 
-                        <td>@eventt.Name</td>
+                        <td>@teacher.Name</td>
 
 
                         <td>
-                            <a class="btn btn-success" asp-route-id="@eventt.Id" asp-action="Detail">Detail</a>
-                            <a class="btn btn-warning" asp-route-id="@eventt.Id" asp-action="Update">Update</a>
-                            <a class="btn btn-danger" asp-route-id="@eventt.Id" asp-action="Delete">Delete</a>
+                            <a class="btn btn-success" asp-route-id="@teacher.Id" asp-action="Detail">Detail</a>
+                            <a class="btn btn-warning" asp-route-id="@teacher.Id" asp-action="Update">Update</a>
+                            <a class="btn btn-danger" asp-route-id="@teacher.Id" asp-action="Delete">Delete</a>
 
                         </td>
 
