--- a/Back-End Project/Areas/Admin/Views/shared/_AdminLayout.cshtml
+++ b/Back-End Project/Areas/Admin/Views/shared/_AdminLayout.cshtml
@@ -1,5 +1,4 @@
-﻿
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -8,30 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Majestic Admin</title>
     <!-- plugins:css -->
-    <link remarginheet" href="~/assets/admin/vendors/mdi/css/materialdesignicons.min.css">
-    <link rel="stylesheet" href="~assets/admin/vendors/base/vendor.bundle.base.css">
+    <link rel="stylesheet" href="~/admin/vendors/mdi/css/materialdesignicons.min.css">
+    <link rel="stylesheet" href="~/admin/vendors/base/vendor.bundle.base.css">
     <!-- endinject -->
     <!-- inject:css -->
     <link rel="stylesheet" href="~/css/adminpanel.css">
     <!-- endinject -->
-    <link rel="shortcut icon" href="../../images/favicon.png" />
-    <style>
-
-        .crud_btn {
-            padding: 10px 15px;
-            border: 1px solid black;
-            border-radius: 10px;
-            text-decoration: none;
-            color: black;
-            margin: 10px;
-            cursor: pointer;
-        }
-
-            .crud_btn:hover {
-                background-color: forestgreen;
-                color: white;
-            }
-    </style>
+    <link rel="shortcut icon" href="~/admin/images/favicon.png" />
 </head>
 
 <body>
@@ -40,8 +22,8 @@
         <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
             <div class="navbar-brand-wrapper d-flex justify-content-center">
                 <div class="navbar-brand-inner-wrapper d-flex justify-content-between align-items-center w-100">
-                    <a class="navbar-brand brand-logo" href="../../index.html"><img src="~/assets/admin/images/logo.svg" alt="logo" /></a>
-                    <a class="navbar-brand brand-logo-mini" href="../../index.html"><img src="~/assets/admin/images/logo-mini.svg" alt="logo" /></a>
+                    <a class="navbar-brand brand-logo" href="../../index.html"><img src="~/admin/images/logo.svg" alt="logo" /></a>
+                    <a class="navbar-brand brand-logo-mini" href="../../index.html"><img src="~/admin/images/logo-mini.svg" alt="logo" /></a>
                     <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
                         <span class="mdi mdi-sort-variant"></span>
                     </button>
@@ -70,7 +52,7 @@
                             <p class="mb-0 font-weight-normal float-left dropdown-header">Messages</p>
                             <a class="dropdown-item">
                                 <div class="item-thumbnail">
-                                    <img src="~/assets/admin/images/faces/face4.jpg" alt="image" class="profile-pic">
+                                    <img src="~/admin/images/faces/face4.jpg" alt="image" class="profile-pic">
                                 </div>
                                 <div class="item-content flex-grow">
                                     <h6 class="ellipsis font-weight-normal">
@@ -83,7 +65,7 @@
                             </a>
                             <a class="dropdown-item">
                                 <div class="item-thumbnail">
-                                    <img src="~/assets/admin/images/faces/face2.jpg" alt="image" class="profile-pic">
+                                    <img src="~/admin/images/faces/face2.jpg" alt="image" class="profile-pic">
                                 </div>
                                 <div class="item-content flex-grow">
                                     <h6 class="ellipsis font-weight-normal">
@@ -96,7 +78,7 @@
                             </a>
                             <a class="dropdown-item">
                                 <div class="item-thumbnail">
-                                    <img src="~/assets/admin/images/faces/face3.jpg" alt="image" class="profile-pic">
+                                    <img src="~/admin/images/faces/face3.jpg" alt="image" class="profile-pic">
                                 </div>
                                 <div class="item-content flex-grow">
                                     <h6 class="ellipsis font-weight-normal">
@@ -159,8 +141,8 @@
                     </li>
                     <li class="nav-item nav-profile dropdown">
                         <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="profileDropdown">
-                            <img src="~/assets/admin/images/faces/face5.jpg" alt="profile" />
-                            <span class="nav-profile-name">Louis Barnett</span>
+                            <img src="~/img/teacher/asiman.png" alt="profile" />
+                            <span class="nav-profile-name">Asiman Qasimzade</span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
                             <a class="dropdown-item">
@@ -185,47 +167,85 @@
             <nav class="sidebar sidebar-offcanvas" id="sidebar">
                 <ul class="nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="../../index.html">
+                        <a class="nav-link" asp-controller="Dashboard" asp-action="Index">
                             <i class="mdi mdi-home menu-icon"></i>
-                            <a class="menu-title" asp-controller="Slider" asp-action='Index'>Slider</a>
+                            <span class="menu-title">Dashboard</span>
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Course" asp-action="Index">
+                            <i class="mdi mdi-view-headline menu-icon"></i>
+                            <span class="menu-title">Course</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../index.html">
-                            <i class="mdi mdi-home menu-icon"></i>
-                            <a class="menu-title" asp-controller="Service" asp-action="index">Services</a>
+                        <a class="nav-link" asp-controller="Blogs" asp-action="Index">
+                            <i class="mdi mdi-chart-pie menu-icon"></i>
+                            <span class="menu-title">Blogs</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Teacher" asp-action="Index">
+                            <i class="mdi mdi-access-point-network menu-icon"></i>
+                            <span class="menu-title">Teacher</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Category" asp-action="Index">
+                            <i class="mdi mdi-grid-large menu-icon"></i>
+                            <span class="menu-title">Category</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Users" asp-action="Index">
+                            <i class="mdi mdi-account menu-icon"></i>
+                            <span class="menu-title">Users</span>
+                        </a>
+                    </li>      <li class="nav-item">
+                        <a class="nav-link" asp-controller="Event" asp-action="Index">
+                            <i class="mdi mdi-account menu-icon"></i>
+                            <span class="menu-title">Events</span>
+                        </a>
+                    </li>
+                    </li>      <li class="nav-item">
+                        <a class="nav-link" asp-controller="Speaker" asp-action="Index">
+                            <i class="mdi mdi-account menu-icon"></i>
+                            <span class="menu-title">Speakers</span>
                         </a>
                     </li>
 
                 </ul>
             </nav>
+            <div class="main-panel">
+                <div class="content-wrapper" style="padding:10px;">
+                    <div class="row">
 
-            @RenderBody()
 
-            <footer class="footer">
-                <div class="d-sm-flex justify-content-center justify-content-sm-between">
-                    <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © bootstrapdash.com 2020</span>
-                    <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center"> Free <a href="https://www.bootstrapdash.com/" target="_blank">Bootstrap dashboard template</a> from Bootstrapdash.com</span>
+                        @RenderBody()
+                    </div>
                 </div>
-            </footer>
-            <!-- partial -->
-            <!-- main-panel ends -->
-        </div>
-        <!-- page-body-wrapper ends -->
-    </div>
-    <!-- container-scroller -->
-    <!-- plugins:js -->
-    <script src="~/assets/admin/vendors/base/vendor.bundle.base.js"></script>
-    <!-- endinject -->
-    <!-- Plugin js for this page-->
-    <!-- End plugin js for this page-->
-    <!-- inject:js -->
-    <script src="../../js/off-canvas.js"></script>
-    <script src="../../js/hoverable-collapse.js"></script>
-    <script src="../../js/template.js"></script>
-    <!-- endinject -->
-    <!-- Custom js for this page-->
-    <!-- End custom js for this page-->
+
+                <footer class="footer">
+                    <div class="d-sm-flex justify-content-center justify-content-sm-between">
+                        <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © bootstrapdash.com 2020</span>
+                        <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center"> Free <a href="https://www.bootstrapdash.com/" target="_blank">Bootstrap dashboard template</a> from Bootstrapdash.com</span>
+                    </div>
+                </footer>
+
+                <script src="~/admin/vendors/base/vendor.bundle.base.js"></script>
+                <!-- endinject -->
+                <!-- Plugin js for this page-->
+                <!-- End plugin js for this page-->
+                <!-- inject:js -->
+                <script src="~/admin/js/off-canvas.js"></script>
+                <script src="~/admin/js/hoverable-collapse.js"></script>
+                <script src="~/admin/js/template.js"></script>
+                <!-- endinject -->
+                <!-- Custom js for this page-->
+                <!-- End custom js for this page-->
+
+            </div>
 </body>
 
 </html>
