--- a/Back-End Project/Areas/Admin/Views/shared/_AdminLayout.cshtml
+++ b/Back-End Project/Areas/Admin/Views/shared/_AdminLayout.cshtml
@@ -185,49 +185,68 @@
                             <span class="menu-title">Course</span>
                         </a>
                     </li>
+
                     <li class="nav-item">
                         <a class="nav-link" asp-controller="Category" asp-action="Index">
                             <i class="mdi mdi-chart-pie menu-icon"></i>
                             <span class="menu-title">Category</span>
                         </a>
                     </li>
+
                     <li class="nav-item">
                         <a class="nav-link" asp-controller="Event" asp-action="Index">
                             <i class="mdi mdi-access-point-network menu-icon"></i>
                             <span class="menu-title">Event</span>
                         </a>
                     </li>
+
                     <li class="nav-item">
                         <a class="nav-link" asp-controller="Speaker" asp-action="Index">
                             <i class="mdi mdi-grid-large menu-icon"></i>
                             <span class="menu-title">Speaker</span>
                         </a>
                     </li>
+
                     <li class="nav-item">
                         <a class="nav-link" asp-controller="Teacher" asp-action="Index">
                             <i class="mdi mdi-account menu-icon"></i>
                             <span class="menu-title">Teacher</span>
                         </a>
-                    </li>      <li class="nav-item">
+                    </li>   
+                    <li class="nav-item">
                         <a class="nav-link" asp-controller="SocialMedia" asp-action="Index">
                             <i class="mdi mdi-account menu-icon"></i>
                             <span class="menu-title">SocialMedia</span>
                         </a>
                     </li>
-                    </li>      <li class="nav-item">
+                        <li class="nav-item">
                         <a class="nav-link" asp-controller="Skill" asp-action="Index">
                             <i class="mdi mdi-account menu-icon"></i>
                             <span class="menu-title">Skill</span>
                         </a>
-                    </li>   </li>      <li class="nav-item">
+                    </li>  
+                    <li class="nav-item">
                         <a class="nav-link" asp-controller="User" asp-action="Index">
                             <i class="mdi mdi-account menu-icon"></i>
                             <span class="menu-title">User</span>
                         </a>
-                    </li>   </li>   </li>      <li class="nav-item">
+                    </li>   
+                    <li class="nav-item">
                         <a class="nav-link" asp-controller="Blog" asp-action="Index">
                             <i class="mdi mdi-account menu-icon"></i>
                             <span class="menu-title">Blog</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Subscribe" asp-action="Index">
+                            <i class="mdi mdi-account menu-icon"></i>
+                            <span class="menu-title">Subscribe</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Setting" asp-action="Index">
+                            <i class="mdi mdi-account menu-icon"></i>
+                            <span class="menu-title">Settings</span>
                         </a>
                     </li>
 
