--- a/Back-End Project/Areas/Admin/Views/Setting/Create.cshtml
+++ b/Back-End Project/Areas/Admin/Views/Setting/Create.cshtml
@@ -23,7 +23,7 @@
                         </div>
                         <div class="form-group">
                             <label for="exampleInputEmail1">Value</label>
-                            <input class="form-control" asp-for="Value" placeholder="Name">
+                            <input class="form-control" asp-for="Value" placeholder="Value">
                             <span asp-validation-for="Value" class="text-danger"></span>
                         </div>
 
