--- a/Back-End Project/Views/Courses/Detail.cshtml
+++ b/Back-End Project/Views/Courses/Detail.cshtml
@@ -103,7 +103,7 @@
                     <div class="single-blog-widget mb-50">
                         <div class="single-blog-banner">
                             <a href="blog-details.html" id="blog"><img src="img/blog/blog-img.jpg" alt="blog"></a>
-                            <h2>best<br> eductaion<br> theme</h2>
+                            @*<h2>best<br> eductaion<br> theme</h2>*@
                         </div>
                     </div>
                     <div class="single-blog-widget mb-50">
